# anarlog

./: .gitignore  README.md
.github/workflows/: desktop_cd.yaml  desktop_publish.yaml  web_cd.yaml
apps/desktop/: index.html  package.json
apps/desktop/flatpak/: com.hyprnote.Hyprnote.desktop  com.hyprnote.Hyprnote.metainfo.xml  com.hyprnote.Hyprnote.yml
apps/desktop/src/: main.tsx  routeTree.gen.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.flatpak.json  tauri.conf.json  tauri.conf.nightly.json  tauri.conf.stable.json  tauri.conf.staging.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/scripts/: compile-icons.sh
apps/desktop/src-tauri/src/: agents-content.md  commands.rs  lib.rs
apps/desktop/src/audio-player/: timeline-shell.tsx
apps/desktop/src/auth/: billing.tsx
apps/desktop/src/billing/: trial-dialog-icon.tsx  trial-ended-dialog.tsx  trial-started-dialog.tsx
apps/desktop/src/changelog/: index.test.tsx  index.tsx
apps/desktop/src/chat/components/body/: empty.tsx
apps/desktop/src/chat/tools/: context-text.ts  index.ts  note-files.test.ts  note-files.ts  strip-ephemeral-tool-context.test.ts  strip-ephemeral-tool-context.ts
apps/desktop/src/chat/transport/: helpers.ts  index.ts  use-transport.ts
apps/desktop/src/composer/: index.tsx
apps/desktop/src/contacts/: shared.tsx
apps/desktop/src/editor-bridge/: app-link-view.tsx  open-editor-link.ts  session-view.tsx
apps/desktop/src/i18n/locales/af/: messages.po
apps/desktop/src/i18n/locales/am/: messages.po
apps/desktop/src/i18n/locales/ar/: messages.po
apps/desktop/src/i18n/locales/as/: messages.po
apps/desktop/src/i18n/locales/az/: messages.po
apps/desktop/src/i18n/locales/ba/: messages.po
apps/desktop/src/i18n/locales/be/: messages.po
apps/desktop/src/i18n/locales/bg/: messages.po
apps/desktop/src/i18n/locales/bn/: messages.po
apps/desktop/src/i18n/locales/bo/: messages.po
apps/desktop/src/i18n/locales/br/: messages.po
apps/desktop/src/i18n/locales/bs/: messages.po
apps/desktop/src/i18n/locales/ca/: messages.po
apps/desktop/src/instruction/: index.tsx
apps/desktop/src/main/: body.tsx  empty.tsx  layout.tsx  shell-frame.tsx  shell-sidebar.tsx  tab-chrome.tsx  top-meeting-timeline.test.tsx  top-meeting-timeline.tsx
apps/desktop/src/main2/: shell.tsx
apps/desktop/src/meeting-float/: hooks.ts  host.test.ts  host.tsx  panel.tsx
apps/desktop/src/onboarding/: calendar.tsx  final.tsx  index.tsx  permissions.tsx  shared.tsx
apps/desktop/src/onboarding/account/: before-login.tsx
apps/desktop/src/routes/: floating.tsx
apps/desktop/src/services/: audio-retention.test.ts  audio-retention.ts  task-manager.tsx
apps/desktop/src/services/calendar/: ctx.test.ts
apps/desktop/src/session/: index.tsx  raw-editor-sync.tsx
apps/desktop/src/session/components/: listen-action.tsx  session-preview-card.test.tsx  session-preview-card.tsx  title-input.test.tsx  title-input.tsx
apps/desktop/src/settings/: index.tsx  integrations.tsx
apps/desktop/src/settings/general/: account.tsx  index.tsx  permissions.tsx  searchable-select.tsx
apps/desktop/src/settings/lab/: index.tsx
apps/desktop/src/settings/todo/: index.tsx
apps/desktop/src/shared/: chat-cta.tsx  control.tsx  floating-action-surface.ts  open-note-dialog.tsx  tabs.tsx  useTabsShortcuts.tsx
apps/desktop/src/shared/main/: body.test.tsx  index.test.tsx  index.tsx  session-status-banner.test.tsx  shell-sidebar.test.tsx  tab-content.tsx  tab-item.tsx
apps/desktop/src/sidebar/: calendar.tsx  custom-sidebar-header.test.tsx  custom-sidebar-header.tsx  devtool.tsx  index.tsx  settings.tsx
apps/desktop/src/sidebar/profile/: index.tsx
apps/desktop/src/sidebar/timeline/: index.test.tsx  index.tsx  item.tsx
apps/desktop/src/sidebar/toast/: index.tsx  registry.tsx
apps/desktop/src/stt/: capabilities.test.ts  capabilities.ts  contexts.test.tsx  contexts.tsx  useRunBatch.ts  useStartListening.test.ts  useStartListening.ts
apps/desktop/src/styles/: globals.css
apps/desktop/src/templates/: utils.ts
apps/desktop/src/types/: tauri.gen.ts
apps/web/src/: styles.css
apps/web/src/functions/: app-origin.ts  auth.ts  billing.ts
apps/web/src/routes/: index.tsx
apps/web/src/routes/blog/: $slug.tsx
crates/fs-sync-core/src/audio/: mod.rs
crates/listener-core/src/actors/session/: supervisor.rs
crates/notification-interface/src/: lib.rs
crates/notification-macos/examples/: test_notification_without_event.rs
crates/notification-macos/swift-lib/src/: Models.swift  NotificationManager+CompactView.swift  NotificationManager+Creation.swift
crates/owhisper-client/src/: providers.rs
crates/owhisper-client/src/adapter/soniox/: mod.rs
crates/transcribe-proxy/src/routes/streaming/: hyprnote.rs
crates/transcribe-soniqo/src/: lib.rs
plugins/fs-sync/: build.rs
plugins/fs-sync/js/: bindings.gen.ts
plugins/fs-sync/permissions/: default.toml
plugins/fs-sync/permissions/autogenerated/: reference.md
plugins/fs-sync/permissions/autogenerated/commands/: audio_delete_orphaned_expired.toml
plugins/fs-sync/permissions/schemas/: schema.json
plugins/fs-sync/src/: commands.rs  lib.rs
plugins/notification/js/: bindings.gen.ts
plugins/transcription/src/: api.rs
plugins/transcription/src/listener2/: ext.rs
plugins/windows/: Cargo.toml  build.rs
plugins/windows/js/: bindings.gen.ts  index.ts
plugins/windows/permissions/: default.toml
plugins/windows/permissions/autogenerated/: reference.md
plugins/windows/permissions/autogenerated/commands/: floating_bar_hide.toml  floating_bar_show.toml  floating_bar_update.toml  window_is_occluded.toml
plugins/windows/permissions/schemas/: schema.json
plugins/windows/src/: commands.rs  events.rs  ext.rs  lib.rs
plugins/windows/src/window/: floating.rs  floating_bar.rs  mod.rs  v1.rs
plugins/windows/swift-lib/: Package.swift
plugins/windows/swift-lib/src/: FloatingBarFonts.swift  FloatingBarManager.swift  FloatingBarModels.swift  FloatingBarView.swift  FloatingBarViewModel.swift  RustBridge.swift  lib.swift
(+138 files in other folders)
